test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-lb
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: "main-lb"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /email
          pathType: Prefix
          backend:
            service:
              name: email-app-expose
              port:
                number: 80
        - path: /payment
          pathType: Prefix
          backend:
            service:
              name: payment-app-expose
              port:
                number: 80
