test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-app-expose
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: email-app
---
apiVersion: v1
kind: Service
metadata:
  name: payment-app-expose
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: payment-app
